# greenlock

./: .dockerignore  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  greenlock.json  pyproject.toml
.github/workflows/: publish.yml  verify.yml
benchmarks/: bench_node_tasks.py  bench_tasks.py  diag_g1.py  diag_g4.py  diag_node.py  registry.py  run_bench.py  run_node_bench.py  smoke_bench.py  verify_bench.py  verify_node_bench.py
docs/: guide_ru.md  isolation.md
greenlock/: __init__.py  _covrun.py  bench_harness.py  citations.py  cli.py  closed_world.py  code_stream.py  code_writer.py  config.py  coverage.py  danger.py  dep_closure.py  doctor.py  gate.py  groundqa.py  index.py  isolate.py  mcp_server.py  patch_applier.py  qa.py  qa_stream.py  rlm.py  search.py  structural.py  testgen.py  utils.py
greenlock/adapters/: __init__.py  custom_verifier.py  docker_wrapper.py  go_verifier.py  node_adapter.py  node_verifier.py  pytest_verifier.py  python_adapter.py  regex_adapter.py  rust_verifier.py  tree_sitter_adapter.py
greenlock/domain_plugins/: __init__.py  doc_idioms.py  helm.py
repos/: greenlock_dev
repos/bench_node_pricing/: package.json  (+2 more)
sample_project/: cli.py  models.py  notify.py  storage.py  test_existing.py  test_rlm.py  test_tree_sitter.py
scripts/: run_suite.py  run_tdd_suite.py
tests/: test_cli.py  test_closed_world_ts.py  test_coverage.py  test_danger.py  test_doctor.py  test_gate.py  test_improvements.py  test_isolate.py  test_node_coverage.py  test_realrepo_bugs.py  test_testgen.py
webapp/: index.html  server.py
(+2 files in other folders)
